--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,18 @@
 {
-  "compilerOptions": {
-    "outDir": "dist",
-    "target": "es5",
-    "module": "commonjs",
-    "jsx": "react",
-    "esModuleInterop": true,
-    "inlineSourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-    "strict": true,
-    "declarationDir": "dist",
-    "importHelpers": true,
-    "noEmitHelpers": true,
-    "lib": [
-      "es6"
-    ]
-  },
-  "include": [
-    "index.ts"
-  ]
+    "compilerOptions": {
+        "outDir": "dist",
+        "target": "es5",
+        "module": "commonjs",
+        "jsx": "react",
+        "esModuleInterop": true,
+        "inlineSourceMap": true,
+        "declaration": true,
+        "declarationMap": true,
+        "strict": true,
+        "declarationDir": "dist",
+        "importHelpers": true,
+        "noEmitHelpers": true,
+        "lib": ["es6", "dom"]
+    },
+    "include": ["index.ts"]
 }
